# ai-agent

./: .env  .env.example  Cargo.toml  README.md  package-lock.json  package.json
src/: App.css  App.tsx  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons_new/: ICON_INSTRUCTIONS.md  UPDATED_ICON_GUIDE.md  complete_icon_generator.js  convert_icons.js  icon_template.html
src-tauri/src/: config.rs  main.rs
src-tauri/src/agent/: conversation.rs  mod.rs  openai.rs
src/agent/: conversation.rs  mod.rs  openai.rs
src/cli/: mod.rs  repl.rs
src/components/: ChatContainer.tsx  ChatMessage.tsx  UserInput.tsx
src/config/: mod.rs
src/mcp/: context7.rs  mod.rs
