[package]
name = "ai-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
reqwest = { version = "0.11.23", features = ["json"] }
anyhow = "1.0.75"
dotenv = "0.15.0"
clap = { version = "4.4.11", features = ["derive"] }
async-trait = "0.1.74"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
rustyline = "12.0.0"
chrono = { version = "0.4.31", features = ["serde"] }
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = "0.3.29"
confy = "0.5.1"
fs-err = "2.11.0"
itertools = "0.12.1"
serde_yaml = "0.9"
dirs = "5.0.1"
async-process = "1.8.1"
once_cell = "1.19.0"
colored = "2.1.0"
